--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,13 +35,13 @@
   ), hsl(240, 2%, 13%);
   --bg-gradient-yellow-1: linear-gradient(
     to bottom right, 
-    hsl(45, 100%, 71%) 0%, 
-    hsla(36, 100%, 69%, 0) 50%
+    hsl(38, 100%, 71%) 0%, 
+    hsla(38, 100%, 69%, 0) 50%
   );
   --bg-gradient-yellow-2: linear-gradient(
     135deg, 
-    hsla(45, 100%, 71%, 0.251) 0%, 
-    hsla(35, 100%, 68%, 0) 59.86%
+    hsla(38, 100%, 71%, 0.251) 0%, 
+    hsla(38, 100%, 68%, 0) 59.86%
   ), hsl(240, 2%, 13%);
   --border-gradient-onyx: linear-gradient(
     to bottom right, 
@@ -50,8 +50,8 @@
   );
   --text-gradient-yellow: linear-gradient(
     to right, 
-    hsl(45, 100%, 72%), 
-    hsl(35, 100%, 68%)
+    hsl(38, 100%, 72%), 
+    hsl(38, 100%, 68%)
   );
 
   /* solid */
@@ -63,8 +63,8 @@
   --smoky-black: hsl(0, 0%, 7%);
   --white-1: hsl(0, 0%, 100%);
   --white-2: hsl(0, 0%, 98%);
-  --orange-yellow-crayola: hsl(45, 100%, 72%);
-  --vegas-gold: hsl(45, 54%, 58%);
+  --orange-yellow-crayola: hsl(38, 100%, 72%);
+  --vegas-gold: hsl(38, 54%, 58%);
   --light-gray: hsl(0, 0%, 84%);
   --light-gray-70: hsla(0, 0%, 84%, 0.7);
   --bittersweet-shimmer: hsl(0, 43%, 51%);
@@ -125,9 +125,13 @@
   box-sizing: border-box;
 }
 
-a { text-decoration: none; }
+a { text-decoration: none; color: var(--orange-yellow-crayola);}
 
 li { list-style: none; }
+
+img:not(.profile-image) {
+    border-radius: 10%;
+}
 
 img, ion-icon, a, button, time, span { display: block; }
 
@@ -744,12 +748,12 @@ main {
 }
 
 .clients-item {
-  min-width: 50%;
+  min-width: 70%;
   scroll-snap-align: start;
 }
 
 .clients-item img {
-  width: 100%;
+  width: 115%;
   filter: grayscale(1);
   transition: var(--transition-1);
 }
@@ -1024,6 +1028,7 @@ main {
   color: var(--light-gray-70);
   font-size: var(--fs-6);
   font-weight: var(--fw-300);
+  color: var(--vegas-gold);
 }
 
 
